NCC/judge/error/23/23_1.txt
/home/saurabh/CTD/NCC/judge/user/23/1/23_1.cpp:1:25: error: ‘QWERWERWE’ does not name a type
 /*Type your code here!*/QWERWERWE
                         ^
